--- a/modulo1/html-sistema-loja/ctrl-estoque.html
+++ b/modulo1/html-sistema-loja/ctrl-estoque.html
@@ -1,23 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Controle de Estoque</title>
+    <title>Companhia da Moda</title>
+
+    <style>
+    h4{ 
+        color:blue;
+    }
+    td{ 
+        background-color:antiquewhite;
+    }
+    body { 
+        background-color: beige; 
+        align-content: center;
+        align-self: center;
+    }
+    table { 
+        align-self: center; 
+    }
+    
+    .texto-header{
+   position: relative;
+   top: 50%;
+   transform: translateY(-50%);
+   text-align: center;
+}
+
+    </style>
+
+
+
+
+
 </head>
 <body>
-    <div>
-        <p>Companhia da Moda</p>
-    </div>
-    
-    <div>
-        <a href="index.html">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
-    </div>
-
+    <header><div class="texto-header">
+        <h1><img src="../img/logo.png" alt="Companhia da Moda"></h1>
+        <h4>Sinta o conforto de se vestir bem!</h4>
+    </header>
+    <table><tr><td>
+        <a href="index.html">Página Inicial</a></td><td>
+        <a href="ctrl-estoque.html">Controle de Estoque</a></td><td>
+        <a href="add-produto.html">Adicionar Produto</a></td><td>
+        <a href="funcionarios.html">Funcionários</a></td><td>
+            <a href="vendas.html">Vendas</a></td><td>
+        <a href="historicovendas.html">Histórico de Vendas</a>
+    </td></tr></table> 
     <h2>Controle de Estoque</h2>
 
     <table width="50%" >
@@ -66,6 +97,8 @@
         </tr>
 
     </table>
-
+    <footer>
+        <em>Todos os direitos reservados</em>
+      </footer>
 </body>
 </html>
