--- a/modulo1/css-bugfixes/exercicio-bugfixes/home.html
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/home.html
@@ -14,10 +14,7 @@
     <h2>For Ever 4</h2>
     <div>
         <div class="container" id="container-de-descricao">
-            <p>
-
-            </p>
-            <p> <p></p>Somos uma empresa focada <br>em tornar a compra de roupas<br> mais fácil </p>
+            <p> Somos uma empresa focada em tornar a compra de roupas mais fácil </p>
             <ol>
                 <li> Ache os melhores descontos </li>
                 <li> Busque pelos seus gostos</li>
@@ -27,7 +24,6 @@
 
         <div class="container" id="container-para-comprar">
             <p> BORA COMEÇAR A </p>
-            <br>
             <a href="comprar.html"><button class="botao-amarelo" > COMPRAR </button></a>
         </div>
     </div>
