--- a/modulo1/css-bugfixes/exercicio-bugfixes/home.html
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/home.html
@@ -16,7 +16,7 @@
     <div>
         <div class="container" id="container-de-descricao">
             <br><br>
-            <p> Somos uma empresa focada em tornar a compra de roupas mais fácil </p>
+            <p> Somos uma empresa focada <br>em tornar a compra de <br>roupas mais fácil </p>
             <ol>
                 <li> Ache os melhores descontos </li>
                 <li> Busque pelos seus gostos</li>
