8o. para aparecer o texto em branco ao clicar com o mouse utilizei button:focus white e td button:hover {     background-color:#fe7e02; para escurecer o botão ao passar o mouse

--- a/modulo1/css-bugfixes/exercicio-bugfixes/comprar.html
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/comprar.html
@@ -46,8 +46,8 @@
             </tr>
         </table>
     </div>
-    <div>
-        <a href="home.html"><button id="back-button"> VOLTAR </button></a>
+    <div class="container">
+            <a href="home.html"><button id="back-button"> VOLTAR </button></a>
     </div>
 </body>
 
